<resources>
    <string name="app_name">Zen Airlines</string>
    <string name="passenger_or_employee">Are you a passenger or an employee?</string>
    <string name="passenger_options">Passenger Options</string>
    <string name="employee_options">Employee Options</string>
    <string name="passenger">Passenger</string>
    <string name="employee">Employee</string>
    <string name="options">What would you like to do?</string>
    <string name="create_customer_account">Create Customer Account</string>
    <string name="book_flight">Book a Flight</string>
    <string name="lookup_customer_id">Lookup Customer Id</string>
    <string name="lookup_flight_info">Lookup Flight Info</string>
    <string name="lookup_employee_id">Lookup Employee Id</string>
    <string name="check_schedule">Check Schedule</string>

    <string name="identity">Identity</string>
    <string name="contact_info">Contact Info</string>
    <string name="address">Address</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="ssn">SSN</string>
    <string name="phone_number">Phone Number</string>
    <string name="email">Email</string>
    <string name="street_address">Street Address</string>
    <string name="city">City</string>
    <string name="zip">Zip</string>

    <string name="departure">Departure</string>
    <string name="arrival">Arrival</string>
    <string name="seating">Seating</string>

    <string name="ssn_or_email">SSN or email</string>
    <string name="flight_number">Flight number</string>
    <string name="seat_number">Seat number</string>
    <string name="employee_id">Employee ID</string>
    <string name="lookup_by_employee_id">Enter employee ID to see schedule</string>
    <string name="lookup_by_flight_number">Enter flight number for flight info</string>
    <string name="lookup_customer_id_by_ssn_or_email">Enter SSN or email to get your customer ID</string>
    <string name="lookup_employee_id_by_ssn_or_email">Enter SSN or email to get your employee ID</string>

    <string name="aircraft">Aircraft</string>
    <string name="date">Date</string>
    <string name="shift_length">Shift Length</string>
</resources>
