<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/flight_number"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/flight_number" />

    <View
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:background="#f1f1f1" />

    <TextView
        android:id="@+id/date"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/date" />

    <View
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:background="#f1f1f1" />

    <TextView
        android:id="@+id/shift_length"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/shift_length" />

</LinearLayout>